// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`python lockfile: pyproject.toml > should match everything 1`] = `
[
  "algolia",
  "anthropic",
  "apachetika",
  "apideck",
  "apify",
  "asana",
  "atlassian",
  "aws",
  "aws.opensearch",
  "azure",
  "box",
  "browerbase",
  "browseruse",
  "bugsnag",
  "celery",
  "chargebee",
  "chromadb",
  "clerk",
  "clickhouse",
  "cohereai",
  "composio",
  "convexdb",
  "crawl4ai",
  "datadog",
  "datadome",
  "dataiku",
  "deepseek",
  "django",
  "elasticsearch",
  "firecrawl",
  "freshdesk",
  "frontegg",
  "fusionauth",
  "gcp",
  "gcp.aiplatform",
  "gcp.bigquery",
  "gcp.cloudbuild",
  "gcp.gcs",
  "gcp.maps",
  "gcp.speech",
  "gcp.translate",
  "gcp.vertex",
  "gcp.vision",
  "geminiai",
  "github",
  "gitlab",
  "google",
  "google.analytics",
  "google.calendar",
  "gradio",
  "groq",
  "hetzner",
  "hostinger",
  "huggingface",
  "inngest",
  "kinde",
  "kubernetes",
  "lago",
  "libsql",
  "linear",
  "logtoio",
  "mapbox",
  "mcp",
  "mergedev",
  "milvusdb",
  "mistralai",
  "mixpanel",
  "mkdocs",
  "mongodb",
  "mysql",
  "neondb",
  "novu",
  "ollama",
  "openai",
  "openapi",
  "opentelemetry",
  "paddle",
  "pinecone",
  "playwright",
  "posthog",
  "propelauth",
  "pulumi",
  "pytorch",
  "qdrant",
  "rabbitmq",
  "resend",
  "sas",
  "segment",
  "selenium",
  "sentry",
  "socketio",
  "sqlalchemy",
  "stytch",
  "supabase",
  "supertokens",
  "swiftype",
  "tencentcloud",
  "tensorflow",
  "twitter",
  "valkey",
  "wikipedia",
  "withorb",
  "wolframalpha",
  "workos",
  "xai",
  "youtube",
  "zuora",
]
`;

exports[`python lockfile: pyproject.toml > should match everything 2`] = `
[
  [
    "python",
    "MergePythonClient",
    "1.0.0",
  ],
  [
    "python",
    "MergePythonSDK",
    "1.0.0",
  ],
  [
    "python",
    "PyGithub",
    "1.0.0",
  ],
  [
    "python",
    "PyMySQL",
    "1.0.0",
  ],
  [
    "python",
    "SQLAlchemy",
    "1.0.0",
  ],
  [
    "python",
    "algoliasearch",
    "1.0.0",
  ],
  [
    "python",
    "algoliasearch-django",
    "1.0.0",
  ],
  [
    "python",
    "amqp",
    "1.0.0",
  ],
  [
    "python",
    "analytics-python",
    "1.0.0",
  ],
  [
    "python",
    "anthropic",
    "1.0.0",
  ],
  [
    "python",
    "apideck-unify",
    "1.0.0",
  ],
  [
    "python",
    "apify",
    "1.0.0",
  ],
  [
    "python",
    "asana",
    "1.0.0",
  ],
  [
    "python",
    "atlassian-python-api",
    "1.0.0",
  ],
  [
    "python",
    "azure-identity",
    "1.0.0",
  ],
  [
    "python",
    "boxsdk",
    "1.0.0",
  ],
  [
    "python",
    "browser-use",
    "1.0.0",
  ],
  [
    "python",
    "browserbase",
    "1.0.0",
  ],
  [
    "python",
    "bugsnag",
    "1.0.0",
  ],
  [
    "python",
    "celery",
    "1.0.0",
  ],
  [
    "python",
    "chargebee",
    "1.0.0",
  ],
  [
    "python",
    "chromadb",
    "1.0.0",
  ],
  [
    "python",
    "clerk-backend-api",
    "1.0.0",
  ],
  [
    "python",
    "clickhouse-connect",
    "1.0.0",
  ],
  [
    "python",
    "cohere",
    "1.0.0",
  ],
  [
    "python",
    "composio-core",
    "1.0.0",
  ],
  [
    "python",
    "convex",
    "1.0.0",
  ],
  [
    "python",
    "crawl4ai",
    "1.0.0",
  ],
  [
    "python",
    "datadog",
    "1.0.0",
  ],
  [
    "python",
    "datadome-fraud-sdk-python",
    "1.0.0",
  ],
  [
    "python",
    "dataiku",
    "1.0.0",
  ],
  [
    "python",
    "django",
    "1.0.0",
  ],
  [
    "python",
    "django-workos",
    "1.0.0",
  ],
  [
    "python",
    "elastic-site-search",
    "1.0.0",
  ],
  [
    "python",
    "elasticsearch",
    "1.0.0",
  ],
  [
    "python",
    "firecrawl-py",
    "1.0.0",
  ],
  [
    "python",
    "freshdesk",
    "1.0.0",
  ],
  [
    "python",
    "frontegg",
    "1.0.0",
  ],
  [
    "python",
    "fusionauth-client",
    "1.0.0",
  ],
  [
    "python",
    "genai",
    "1.0.0",
  ],
  [
    "python",
    "google-analytics-data",
    "1.0.0",
  ],
  [
    "python",
    "google-api-python-client",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-aiplatform",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-bigquery-datatransfer",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-bigquery-logging",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-build",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-speech",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-storage",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-translate",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-vision",
    "1.0.0",
  ],
  [
    "python",
    "google-generativeai",
    "1.0.0",
  ],
  [
    "python",
    "google-maps-mapsplatformdatasets",
    "1.0.0",
  ],
  [
    "python",
    "gradio",
    "1.0.0",
  ],
  [
    "python",
    "groq",
    "1.0.0",
  ],
  [
    "python",
    "hcloud",
    "1.0.0",
  ],
  [
    "python",
    "hostinger_api",
    "1.0.0",
  ],
  [
    "python",
    "huggingface-hub",
    "1.0.0",
  ],
  [
    "python",
    "inngest",
    "1.0.0",
  ],
  [
    "python",
    "kinde-python-sdk",
    "1.0.0",
  ],
  [
    "python",
    "kubernetes",
    "1.0.0",
  ],
  [
    "python",
    "lago-python-client",
    "1.0.0",
  ],
  [
    "python",
    "langchain-anthropic",
    "1.0.0",
  ],
  [
    "python",
    "langchain-deepseek",
    "1.0.0",
  ],
  [
    "python",
    "langchain-google-calendar-tools",
    "1.0.0",
  ],
  [
    "python",
    "langchain-google-genai",
    "1.0.0",
  ],
  [
    "python",
    "langchain-groq",
    "1.0.0",
  ],
  [
    "python",
    "langchain-huggingface",
    "1.0.0",
  ],
  [
    "python",
    "langchain-milvus",
    "1.0.0",
  ],
  [
    "python",
    "langchain-mistralai",
    "1.0.0",
  ],
  [
    "python",
    "langchain-mongodb",
    "1.0.0",
  ],
  [
    "python",
    "langchain-ollama",
    "1.0.0",
  ],
  [
    "python",
    "langchain-openai",
    "1.0.0",
  ],
  [
    "python",
    "langchain-xai",
    "1.0.0",
  ],
  [
    "python",
    "libsql-experimental",
    "1.0.0",
  ],
  [
    "python",
    "linear-cli",
    "1.0.0",
  ],
  [
    "python",
    "logto",
    "1.0.0",
  ],
  [
    "python",
    "mapbox-tilesets",
    "1.0.0",
  ],
  [
    "python",
    "mcp",
    "1.0.0",
  ],
  [
    "python",
    "mistralai",
    "1.0.0",
  ],
  [
    "python",
    "mixpanel",
    "1.0.0",
  ],
  [
    "python",
    "mkdocs",
    "1.0.0",
  ],
  [
    "python",
    "mysql-connector-python",
    "1.0.0",
  ],
  [
    "python",
    "mysqlclient",
    "1.0.0",
  ],
  [
    "python",
    "neon-api",
    "1.0.0",
  ],
  [
    "python",
    "novu",
    "1.0.0",
  ],
  [
    "python",
    "ollama",
    "1.0.0",
  ],
  [
    "python",
    "openai",
    "1.0.0",
  ],
  [
    "python",
    "openapi",
    "1.0.0",
  ],
  [
    "python",
    "opensearch-py",
    "1.0.0",
  ],
  [
    "python",
    "opentelemetry-distro",
    "1.0.0",
  ],
  [
    "python",
    "orb-billing",
    "1.0.0",
  ],
  [
    "python",
    "paddle-python-sdk",
    "1.0.0",
  ],
  [
    "python",
    "pinecone",
    "1.0.0",
  ],
  [
    "python",
    "posthog",
    "1.0.0",
  ],
  [
    "python",
    "propelauth_fastapi",
    "1.0.0",
  ],
  [
    "python",
    "pulumi",
    "1.0.0",
  ],
  [
    "python",
    "pymilvus",
    "1.0.0",
  ],
  [
    "python",
    "pymongo",
    "1.0.0",
  ],
  [
    "python",
    "pymysql",
    "1.0.0",
  ],
  [
    "python",
    "pytest-playwright",
    "1.0.0",
  ],
  [
    "python",
    "python-gitlab",
    "1.0.0",
  ],
  [
    "python",
    "python-socketio",
    "1.0.0",
  ],
  [
    "python",
    "pytorch",
    "1.0.0",
  ],
  [
    "python",
    "pytube",
    "1.0.0",
  ],
  [
    "python",
    "qdrant-client",
    "1.0.0",
  ],
  [
    "python",
    "resend",
    "1.0.0",
  ],
  [
    "python",
    "sasviya",
    "1.0.0",
  ],
  [
    "python",
    "selenium",
    "1.0.0",
  ],
  [
    "python",
    "sentry_sdk",
    "1.0.0",
  ],
  [
    "python",
    "stytch",
    "1.0.0",
  ],
  [
    "python",
    "supabase",
    "1.0.0",
  ],
  [
    "python",
    "supertokens_python",
    "1.0.0",
  ],
  [
    "python",
    "tencentcloud-sdk-python",
    "1.0.0",
  ],
  [
    "python",
    "tensorflow",
    "1.0.0",
  ],
  [
    "python",
    "tika",
    "1.0.0",
  ],
  [
    "python",
    "tweepy",
    "1.0.0",
  ],
  [
    "python",
    "valkey",
    "1.0.0",
  ],
  [
    "python",
    "valkey-glide",
    "1.0.0",
  ],
  [
    "python",
    "vertexai",
    "1.0.0",
  ],
  [
    "python",
    "wikipedia",
    "1.0.0",
  ],
  [
    "python",
    "wolframalpha",
    "1.0.0",
  ],
  [
    "python",
    "workos",
    "1.0.0",
  ],
  [
    "python",
    "youtube-transcript-api",
    "1.0.0",
  ],
  [
    "python",
    "zuora-sdk",
    "1.0.0",
  ],
]
`;

exports[`python lockfile: requirements.txt > should match everything 1`] = `
[
  "algolia",
  "anthropic",
  "apachetika",
  "apideck",
  "apify",
  "asana",
  "atlassian",
  "aws",
  "aws.opensearch",
  "azure",
  "box",
  "browerbase",
  "browseruse",
  "bugsnag",
  "celery",
  "chargebee",
  "chromadb",
  "clerk",
  "clickhouse",
  "cohereai",
  "composio",
  "convexdb",
  "crawl4ai",
  "datadog",
  "datadome",
  "dataiku",
  "deepseek",
  "django",
  "elasticsearch",
  "firecrawl",
  "freshdesk",
  "frontegg",
  "fusionauth",
  "gcp",
  "gcp.aiplatform",
  "gcp.bigquery",
  "gcp.cloudbuild",
  "gcp.gcs",
  "gcp.maps",
  "gcp.speech",
  "gcp.translate",
  "gcp.vertex",
  "gcp.vision",
  "geminiai",
  "github",
  "gitlab",
  "google",
  "google.analytics",
  "google.calendar",
  "gradio",
  "groq",
  "hetzner",
  "hostinger",
  "huggingface",
  "inngest",
  "kinde",
  "kubernetes",
  "lago",
  "libsql",
  "linear",
  "logtoio",
  "mapbox",
  "mcp",
  "mergedev",
  "milvusdb",
  "mistralai",
  "mixpanel",
  "mkdocs",
  "mongodb",
  "mysql",
  "neondb",
  "novu",
  "ollama",
  "openai",
  "openapi",
  "opentelemetry",
  "paddle",
  "pinecone",
  "playwright",
  "posthog",
  "propelauth",
  "pulumi",
  "python",
  "pytorch",
  "qdrant",
  "rabbitmq",
  "resend",
  "sas",
  "segment",
  "selenium",
  "sentry",
  "socketio",
  "sqlalchemy",
  "stytch",
  "supabase",
  "supertokens",
  "swiftype",
  "tencentcloud",
  "tensorflow",
  "twitter",
  "valkey",
  "wikipedia",
  "withorb",
  "wolframalpha",
  "workos",
  "xai",
  "youtube",
  "zuora",
]
`;

exports[`python lockfile: requirements.txt > should match everything 2`] = `
[
  [
    "python",
    "MergePythonClient",
    "1.0.0",
  ],
  [
    "python",
    "MergePythonSDK",
    "1.0.0",
  ],
  [
    "python",
    "PyGithub",
    "1.0.0",
  ],
  [
    "python",
    "PyMySQL",
    "1.0.0",
  ],
  [
    "python",
    "SQLAlchemy",
    "1.0.0",
  ],
  [
    "python",
    "algoliasearch",
    "1.0.0",
  ],
  [
    "python",
    "algoliasearch-django",
    "1.0.0",
  ],
  [
    "python",
    "amqp",
    "1.0.0",
  ],
  [
    "python",
    "analytics-python",
    "1.0.0",
  ],
  [
    "python",
    "anthropic",
    "1.0.0",
  ],
  [
    "python",
    "apideck-unify",
    "1.0.0",
  ],
  [
    "python",
    "apify",
    "1.0.0",
  ],
  [
    "python",
    "asana",
    "1.0.0",
  ],
  [
    "python",
    "atlassian-python-api",
    "1.0.0",
  ],
  [
    "python",
    "azure-identity",
    "1.0.0",
  ],
  [
    "python",
    "boxsdk",
    "1.0.0",
  ],
  [
    "python",
    "browser-use",
    "1.0.0",
  ],
  [
    "python",
    "browserbase",
    "1.0.0",
  ],
  [
    "python",
    "bugsnag",
    "1.0.0",
  ],
  [
    "python",
    "celery",
    "1.0.0",
  ],
  [
    "python",
    "chargebee",
    "1.0.0",
  ],
  [
    "python",
    "chromadb",
    "1.0.0",
  ],
  [
    "python",
    "clerk-backend-api",
    "1.0.0",
  ],
  [
    "python",
    "clickhouse-connect",
    "1.0.0",
  ],
  [
    "python",
    "cohere",
    "1.0.0",
  ],
  [
    "python",
    "composio-core",
    "1.0.0",
  ],
  [
    "python",
    "convex",
    "1.0.0",
  ],
  [
    "python",
    "crawl4ai",
    "1.0.0",
  ],
  [
    "python",
    "datadog",
    "1.0.0",
  ],
  [
    "python",
    "datadome-fraud-sdk-python",
    "1.0.0",
  ],
  [
    "python",
    "dataiku",
    "1.0.0",
  ],
  [
    "python",
    "django",
    "1.0.0",
  ],
  [
    "python",
    "django-workos",
    "1.0.0",
  ],
  [
    "python",
    "elastic-site-search",
    "1.0.0",
  ],
  [
    "python",
    "elasticsearch",
    "1.0.0",
  ],
  [
    "python",
    "firecrawl-py",
    "1.0.0",
  ],
  [
    "python",
    "freshdesk",
    "1.0.0",
  ],
  [
    "python",
    "frontegg",
    "1.0.0",
  ],
  [
    "python",
    "fusionauth-client",
    "1.0.0",
  ],
  [
    "python",
    "genai",
    "1.0.0",
  ],
  [
    "python",
    "google-analytics-data",
    "1.0.0",
  ],
  [
    "python",
    "google-api-python-client",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-aiplatform",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-bigquery-datatransfer",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-bigquery-logging",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-build",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-speech",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-storage",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-translate",
    "1.0.0",
  ],
  [
    "python",
    "google-cloud-vision",
    "1.0.0",
  ],
  [
    "python",
    "google-generativeai",
    "1.0.0",
  ],
  [
    "python",
    "google-maps-mapsplatformdatasets",
    "1.0.0",
  ],
  [
    "python",
    "gradio",
    "1.0.0",
  ],
  [
    "python",
    "groq",
    "1.0.0",
  ],
  [
    "python",
    "hcloud",
    "1.0.0",
  ],
  [
    "python",
    "hostinger_api",
    "1.0.0",
  ],
  [
    "python",
    "huggingface-hub",
    "1.0.0",
  ],
  [
    "python",
    "inngest",
    "1.0.0",
  ],
  [
    "python",
    "kinde-python-sdk",
    "1.0.0",
  ],
  [
    "python",
    "kubernetes",
    "1.0.0",
  ],
  [
    "python",
    "lago-python-client",
    "1.0.0",
  ],
  [
    "python",
    "langchain-anthropic",
    "1.0.0",
  ],
  [
    "python",
    "langchain-deepseek",
    "1.0.0",
  ],
  [
    "python",
    "langchain-google-calendar-tools",
    "1.0.0",
  ],
  [
    "python",
    "langchain-google-genai",
    "1.0.0",
  ],
  [
    "python",
    "langchain-groq",
    "1.0.0",
  ],
  [
    "python",
    "langchain-huggingface",
    "1.0.0",
  ],
  [
    "python",
    "langchain-milvus",
    "1.0.0",
  ],
  [
    "python",
    "langchain-mistralai",
    "1.0.0",
  ],
  [
    "python",
    "langchain-mongodb",
    "1.0.0",
  ],
  [
    "python",
    "langchain-ollama",
    "1.0.0",
  ],
  [
    "python",
    "langchain-openai",
    "1.0.0",
  ],
  [
    "python",
    "langchain-xai",
    "1.0.0",
  ],
  [
    "python",
    "libsql-experimental",
    "1.0.0",
  ],
  [
    "python",
    "linear-cli",
    "1.0.0",
  ],
  [
    "python",
    "logto",
    "1.0.0",
  ],
  [
    "python",
    "mapbox-tilesets",
    "1.0.0",
  ],
  [
    "python",
    "mcp",
    "1.0.0",
  ],
  [
    "python",
    "mistralai",
    "1.0.0",
  ],
  [
    "python",
    "mixpanel",
    "1.0.0",
  ],
  [
    "python",
    "mkdocs",
    "1.0.0",
  ],
  [
    "python",
    "mysql-connector-python",
    "1.0.0",
  ],
  [
    "python",
    "mysqlclient",
    "1.0.0",
  ],
  [
    "python",
    "neon-api",
    "1.0.0",
  ],
  [
    "python",
    "novu",
    "1.0.0",
  ],
  [
    "python",
    "ollama",
    "1.0.0",
  ],
  [
    "python",
    "openai",
    "1.0.0",
  ],
  [
    "python",
    "openapi",
    "1.0.0",
  ],
  [
    "python",
    "opensearch-py",
    "1.0.0",
  ],
  [
    "python",
    "opentelemetry-distro",
    "1.0.0",
  ],
  [
    "python",
    "orb-billing",
    "1.0.0",
  ],
  [
    "python",
    "paddle-python-sdk",
    "1.0.0",
  ],
  [
    "python",
    "pinecone",
    "1.0.0",
  ],
  [
    "python",
    "posthog",
    "1.0.0",
  ],
  [
    "python",
    "propelauth_fastapi",
    "1.0.0",
  ],
  [
    "python",
    "pulumi",
    "1.0.0",
  ],
  [
    "python",
    "pymilvus",
    "1.0.0",
  ],
  [
    "python",
    "pymongo",
    "1.0.0",
  ],
  [
    "python",
    "pymysql",
    "1.0.0",
  ],
  [
    "python",
    "pytest-playwright",
    "1.0.0",
  ],
  [
    "python",
    "python-gitlab",
    "1.0.0",
  ],
  [
    "python",
    "python-socketio",
    "1.0.0",
  ],
  [
    "python",
    "pytorch",
    "1.0.0",
  ],
  [
    "python",
    "pytube",
    "1.0.0",
  ],
  [
    "python",
    "qdrant-client",
    "1.0.0",
  ],
  [
    "python",
    "resend",
    "1.0.0",
  ],
  [
    "python",
    "sasviya",
    "1.0.0",
  ],
  [
    "python",
    "selenium",
    "1.0.0",
  ],
  [
    "python",
    "sentry_sdk",
    "1.0.0",
  ],
  [
    "python",
    "stytch",
    "1.0.0",
  ],
  [
    "python",
    "supabase",
    "1.0.0",
  ],
  [
    "python",
    "supertokens_python",
    "1.0.0",
  ],
  [
    "python",
    "tencentcloud-sdk-python",
    "1.0.0",
  ],
  [
    "python",
    "tensorflow",
    "1.0.0",
  ],
  [
    "python",
    "tika",
    "1.0.0",
  ],
  [
    "python",
    "tweepy",
    "1.0.0",
  ],
  [
    "python",
    "valkey",
    "1.0.0",
  ],
  [
    "python",
    "valkey-glide",
    "1.0.0",
  ],
  [
    "python",
    "vertexai",
    "1.0.0",
  ],
  [
    "python",
    "wikipedia",
    "1.0.0",
  ],
  [
    "python",
    "wolframalpha",
    "1.0.0",
  ],
  [
    "python",
    "workos",
    "1.0.0",
  ],
  [
    "python",
    "youtube-transcript-api",
    "1.0.0",
  ],
  [
    "python",
    "zuora-sdk",
    "1.0.0",
  ],
]
`;

exports[`python lockfile: requirements.txt > should match weird syntax 1`] = `
[
  "algolia",
  "datadog",
  "python",
  "tensorflow",
]
`;

exports[`python lockfile: requirements.txt > should match weird syntax 2`] = `
[
  [
    "python",
    "algoliasearch",
    "1.9.1",
  ],
  [
    "python",
    "datadog",
    "1.4.3",
  ],
  [
    "python",
    "tensorflow",
    "latest",
  ],
]
`;
